added ccv_set_output_levels so that convnet training misc can be put in verbose

--- a/test/makefile
+++ b/test/makefile
@@ -1,8 +1,8 @@
 all:
-	${MAKE} -C functional ; ${MAKE} -C regression
+	${MAKE} -C unit ; ${MAKE} -C regression
 
 test:
-	${MAKE} -C functional test && ${MAKE} -C regression test
+	${MAKE} -C unit test && ${MAKE} -C regression test
 
 clean:
-	${MAKE} clean -C ../lib ; ${MAKE} clean -C functional ; ${MAKE} clean -C regression
+	${MAKE} clean -C ../lib ; ${MAKE} clean -C unit ; ${MAKE} clean -C regression
