--- a/test/unit/makefile
+++ b/test/unit/makefile
@@ -3,7 +3,7 @@ include ../../lib/config.mk
 #CC +=# -fprofile-arcs -ftest-coverage
 LDFLAGS := -L"../../lib" -lccv $(LDFLAGS)
 CFLAGS := -O3 -Wall -I"../../lib" -I"../" $(CFLAGS)
-TARGETS = algebra.tests util.tests numeric.tests basic.tests memory.tests io.tests transform.tests convnet.tests 3rdparty.tests
+TARGETS = algebra.tests util.tests numeric.tests basic.tests memory.tests io.tests transform.tests convnet.tests 3rdparty.tests output.tests
 
 all: $(TARGETS)
 
