added basic check for softmax logistic loss
haven't checked backprop, unlikely to be right.

--- a/bin/cuda/makefile
+++ b/bin/cuda/makefile
@@ -5,7 +5,7 @@ LDFLAGS := -L"../../lib" -lccv $(LDFLAGS)
 CFLAGS := -O3 -Wall -I"../../lib" $(CFLAGS)
 NVFLAGS := -O3 -I"../../lib" -lineinfo $(NVFLAGS)
 
-all: libccv.a cwc-forwards cwc-bench cwc-verify
+all: libccv.a cwc-forwards cwc-backwards cwc-bench cwc-verify
 
 clean:
 	${MAKE} clean -C ../../lib ; rm -f *.o $(TARGETS)
@@ -18,6 +18,9 @@ cwc-verify: %: %.o cwc-verify-runtime.o libccv.a
 
 cwc-forwards: %: %.o cwc-forwards-runtime.o libccv.a
 	$(CC) -o $@ cwc-forwards-runtime.o $< $(LDFLAGS)
+
+cwc-backwards: %: %.o cwc-backwards-runtime.o libccv.a
+	$(CC) -o $@ cwc-backwards-runtime.o $< $(LDFLAGS)
 
 libccv.a:
 	${MAKE} -C ../../lib
