parallelize data loading

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -3,7 +3,7 @@ AC_INIT([libccv], [0.6])
 AC_SUBST(DEFINE_MACROS, [""])
 AC_SUBST(MKCFLAGS, [""])
 AC_SUBST(MKLDFLAGS, ["-lm "])
-AC_SUBST(CUDA_OBJS, ["cuda/cwc_convnet.o cuda/convnet/cwc_convnet_convolutional.o cuda/convnet/cwc_convnet_rnorm.o cuda/convnet/cwc_convnet_pool.o cuda/convnet/cwc_convnet_full_connect.o"])
+AC_SUBST(CUDA_OBJS, ["cuda/cwc_convnet.o cuda/cwc_convnet_helper.o cuda/convnet/cwc_convnet_convolutional.o cuda/convnet/cwc_convnet_rnorm.o cuda/convnet/cwc_convnet_pool.o cuda/convnet/cwc_convnet_full_connect.o"])
 
 # check if clang exists
 AC_CHECK_PROG(CC, clang, clang)
