build for address sanitizer, removed unused files
Fixed one error for perspective transform, run through unit tests to
make sure no memory address related issues, run through ./bin/cnnclassify
and ./bin/scddetect on test dataset to verify no memory address related
issues

--- a/bin/makefile
+++ b/bin/makefile
@@ -1,6 +1,6 @@
 include ../lib/config.mk
 
-#CC += -faddress-sanitizer -fno-omit-frame-pointer
+# CC += -g -fsanitize=address -fno-omit-frame-pointer # -fprofile-arcs -ftest-coverage
 LDFLAGS := -L"../lib" -lccv $(LDFLAGS)
 CFLAGS := -O3 -Wall -I"../lib" $(CFLAGS)
 
