--- a/test/regression/makefile
+++ b/test/regression/makefile
@@ -1,5 +1,6 @@
 include ../../lib/config.mk
 
+# CC += -g -fsanitize=address -fno-omit-frame-pointer # -fprofile-arcs -ftest-coverage
 LDFLAGS := -L"../../lib" -lccv $(LDFLAGS)
 CFLAGS := -O3 -Wall -I"../../lib" -I"../" $(CFLAGS)
 TARGETS = defects.l0.1.tests
