--- a/test/unit/makefile
+++ b/test/unit/makefile
@@ -1,6 +1,6 @@
 include ../../lib/config.mk
 
-#CC +=# -fprofile-arcs -ftest-coverage
+# CC += -g -fsanitize=address -fno-omit-frame-pointer # -fprofile-arcs -ftest-coverage
 LDFLAGS := -L"../../lib" -lccv $(LDFLAGS)
 CFLAGS := -O3 -Wall -I"../../lib" -I"../" $(CFLAGS)
 TARGETS = algebra.tests util.tests numeric.tests basic.tests image_processing.tests memory.tests io.tests transform.tests convnet.tests 3rdparty.tests output.tests
