updated getting started, and make sure all referenced code compiles, will add these to CI later

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -7,9 +7,9 @@ highlighter: null
 markdown: kramdown
 
 kramdown:
-  use_coderay: true
-  coderay:
-    coderay_css: class
+  syntax_highligher: coderay
+
+code_dir: _source
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
