Too much dependency to compile the site, make source first.

--- a/site/makefile
+++ b/site/makefile
@@ -3,11 +3,14 @@
 all: site
 
 # This makes sure all example code compiles with latest ccv
-site: doc
-	make -C _source && jekyll build
+site: doc source
+	jekyll build
 
 doc:
 	cd .. && doxygen .doxygen.conf && cd site && ./_doxygen.sh
+
+source:
+	make -C _source
 
 clean:
 	rm -rf _site/* _doxygen/*
